--- a/_notebooks/2023-03-09-2.3-Extracting-Information-From-Data.ipynb
+++ b/_notebooks/2023-03-09-2.3-Extracting-Information-From-Data.ipynb
@@ -75,11 +75,144 @@
     "\n",
     "**Answer: C** Question I can be answered because the teacher can detect a correlation between responses to questions 1 and 3 on the survey. Question II can be answered because the teacher can detect a correlation between responses to questions 1 and 2 on the survey. Question III cannot be answered because the survey is anonymous and the teacher cannot compare student grades with the responses to the survey questions."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# JSON Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     sepalLength  sepalWidth  petalLength  petalWidth    species\n",
+      "0            5.1         3.5          1.4         0.2     setosa\n",
+      "1            4.9         3.0          1.4         0.2     setosa\n",
+      "2            4.7         3.2          1.3         0.2     setosa\n",
+      "3            4.6         3.1          1.5         0.2     setosa\n",
+      "4            5.0         3.6          1.4         0.2     setosa\n",
+      "..           ...         ...          ...         ...        ...\n",
+      "145          6.7         3.0          5.2         2.3  virginica\n",
+      "146          6.3         2.5          5.0         1.9  virginica\n",
+      "147          6.5         3.0          5.2         2.0  virginica\n",
+      "148          6.2         3.4          5.4         2.3  virginica\n",
+      "149          5.9         3.0          5.1         1.8  virginica\n",
+      "\n",
+      "[150 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# reads the JSON file and converts it to a Pandas DataFrame\n",
+    "df = pd.read_json('files/iris.json')\n",
+    "# print dataframe\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sepalLength  sepalWidth  petalLength  petalWidth species\n",
+      "0          5.1         3.5          1.4         0.2  setosa\n",
+      "1          4.9         3.0          1.4         0.2  setosa\n",
+      "2          4.7         3.2          1.3         0.2  setosa\n",
+      "3          4.6         3.1          1.5         0.2  setosa\n",
+      "4          5.0         3.6          1.4         0.2  setosa\n",
+      "5          5.4         3.9          1.7         0.4  setosa\n",
+      "6          4.6         3.4          1.4         0.3  setosa\n",
+      "7          5.0         3.4          1.5         0.2  setosa\n",
+      "8          4.4         2.9          1.4         0.2  setosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# reads the JSON file and converts it to a Pandas DataFrame\n",
+    "df = pd.read_json('files/iris.json')\n",
+    "cols_to_print = [ 'sepalLength','sepalWidth', 'petalLength', 'petalWidth', 'species']\n",
+    "df = df[cols_to_print]\n",
+    "rows_to_print = [0,1,2,3,4,5, 6, 7, 8]\n",
+    "df = df.iloc[rows_to_print]\n",
+    "\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--Max sepalLength-- \n",
+      "    sepalLength  sepalWidth  petalLength  petalWidth species\n",
+      "5          5.4         3.9          1.7         0.4  setosa\n",
+      "\n",
+      "--Min sepalWidth-- \n",
+      "    sepalLength  sepalWidth  petalLength  petalWidth species\n",
+      "8          4.4         2.9          1.4         0.2  setosa\n",
+      "\n",
+      "--Max petalLength-- \n",
+      "    sepalLength  sepalWidth  petalLength  petalWidth species\n",
+      "5          5.4         3.9          1.7         0.4  setosa\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( \"--Max sepalLength-- \\n\", \n",
+    "    df[df.sepalLength == df.sepalLength.max()])\n",
+    "\n",
+    "print(\"\")\n",
+    "\n",
+    "print( \"--Min sepalWidth-- \\n\", \n",
+    "    df[df.sepalWidth == df.sepalWidth.min()])\n",
+    "\n",
+    "print(\"\")\n",
+    "\n",
+    "\n",
+    "print( \"--Max petalLength-- \\n\", \n",
+    "    df[df.petalLength == df.petalLength.max()])\n",
+    "\n",
+    "print(\"\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
