--- a/_posts/2023-03-09-2.3-Extracting-Information-From-Data.md
+++ b/_posts/2023-03-09-2.3-Extracting-Information-From-Data.md
@@ -91,6 +91,164 @@ layout: notebook
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="JSON-Dataset">JSON Dataset<a class="anchor-link" href="#JSON-Dataset"> </a></h1>
+</div>
+</div>
+</div>
+    {% raw %}
+    
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
+<span class="c1"># reads the JSON file and converts it to a Pandas DataFrame</span>
+<span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_json</span><span class="p">(</span><span class="s1">&#39;files/iris.json&#39;</span><span class="p">)</span>
+<span class="c1"># print dataframe</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">df</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>     sepalLength  sepalWidth  petalLength  petalWidth    species
+0            5.1         3.5          1.4         0.2     setosa
+1            4.9         3.0          1.4         0.2     setosa
+2            4.7         3.2          1.3         0.2     setosa
+3            4.6         3.1          1.5         0.2     setosa
+4            5.0         3.6          1.4         0.2     setosa
+..           ...         ...          ...         ...        ...
+145          6.7         3.0          5.2         2.3  virginica
+146          6.3         2.5          5.0         1.9  virginica
+147          6.5         3.0          5.2         2.0  virginica
+148          6.2         3.4          5.4         2.3  virginica
+149          5.9         3.0          5.1         1.8  virginica
+
+[150 rows x 5 columns]
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+    {% endraw %}
+
+    {% raw %}
+    
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
+<span class="c1"># reads the JSON file and converts it to a Pandas DataFrame</span>
+<span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_json</span><span class="p">(</span><span class="s1">&#39;files/iris.json&#39;</span><span class="p">)</span>
+<span class="n">cols_to_print</span> <span class="o">=</span> <span class="p">[</span> <span class="s1">&#39;sepalLength&#39;</span><span class="p">,</span><span class="s1">&#39;sepalWidth&#39;</span><span class="p">,</span> <span class="s1">&#39;petalLength&#39;</span><span class="p">,</span> <span class="s1">&#39;petalWidth&#39;</span><span class="p">,</span> <span class="s1">&#39;species&#39;</span><span class="p">]</span>
+<span class="n">df</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="n">cols_to_print</span><span class="p">]</span>
+<span class="n">rows_to_print</span> <span class="o">=</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">2</span><span class="p">,</span><span class="mi">3</span><span class="p">,</span><span class="mi">4</span><span class="p">,</span><span class="mi">5</span><span class="p">,</span> <span class="mi">6</span><span class="p">,</span> <span class="mi">7</span><span class="p">,</span> <span class="mi">8</span><span class="p">]</span>
+<span class="n">df</span> <span class="o">=</span> <span class="n">df</span><span class="o">.</span><span class="n">iloc</span><span class="p">[</span><span class="n">rows_to_print</span><span class="p">]</span>
+
+<span class="nb">print</span><span class="p">(</span><span class="n">df</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>   sepalLength  sepalWidth  petalLength  petalWidth species
+0          5.1         3.5          1.4         0.2  setosa
+1          4.9         3.0          1.4         0.2  setosa
+2          4.7         3.2          1.3         0.2  setosa
+3          4.6         3.1          1.5         0.2  setosa
+4          5.0         3.6          1.4         0.2  setosa
+5          5.4         3.9          1.7         0.4  setosa
+6          4.6         3.4          1.4         0.3  setosa
+7          5.0         3.4          1.5         0.2  setosa
+8          4.4         2.9          1.4         0.2  setosa
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+    {% endraw %}
+
+    {% raw %}
+    
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span> <span class="s2">&quot;--Max sepalLength-- </span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">,</span> 
+    <span class="n">df</span><span class="p">[</span><span class="n">df</span><span class="o">.</span><span class="n">sepalLength</span> <span class="o">==</span> <span class="n">df</span><span class="o">.</span><span class="n">sepalLength</span><span class="o">.</span><span class="n">max</span><span class="p">()])</span>
+
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;&quot;</span><span class="p">)</span>
+
+<span class="nb">print</span><span class="p">(</span> <span class="s2">&quot;--Min sepalWidth-- </span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">,</span> 
+    <span class="n">df</span><span class="p">[</span><span class="n">df</span><span class="o">.</span><span class="n">sepalWidth</span> <span class="o">==</span> <span class="n">df</span><span class="o">.</span><span class="n">sepalWidth</span><span class="o">.</span><span class="n">min</span><span class="p">()])</span>
+
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;&quot;</span><span class="p">)</span>
+
+
+<span class="nb">print</span><span class="p">(</span> <span class="s2">&quot;--Max petalLength-- </span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">,</span> 
+    <span class="n">df</span><span class="p">[</span><span class="n">df</span><span class="o">.</span><span class="n">petalLength</span> <span class="o">==</span> <span class="n">df</span><span class="o">.</span><span class="n">petalLength</span><span class="o">.</span><span class="n">max</span><span class="p">()])</span>
+
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;&quot;</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>--Max sepalLength-- 
+    sepalLength  sepalWidth  petalLength  petalWidth species
+5          5.4         3.9          1.7         0.4  setosa
+
+--Min sepalWidth-- 
+    sepalLength  sepalWidth  petalLength  petalWidth species
+8          4.4         2.9          1.4         0.2  setosa
+
+--Max petalLength-- 
+    sepalLength  sepalWidth  petalLength  petalWidth species
+5          5.4         3.9          1.7         0.4  setosa
+
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+    {% endraw %}
+
 </div>
  
 
