--- a/_notebooks/2023-03-13-AP-unit2-4a.ipynb
+++ b/_notebooks/2023-03-13-AP-unit2-4a.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "# Setup of key Flask object (app)\n",
     "app = Flask(__name__)\n",
     "# Setup SQLAlchemy object and properties for the database (db)\n",
-    "database = 'sqlite:///files/sqlite.db'  # path and filename of database\n",
+    "database = 'sqlite:///sqlite.db'  # path and filename of database\n",
     "app.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = False\n",
     "app.config['SQLALCHEMY_DATABASE_URI'] = database\n",
     "app.config['SECRET_KEY'] = 'SECRET_KEY'\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,6 @@
    ],
    "source": [
     "\"\"\"Database Creation and Testing \"\"\"\n",
-    "\n",
     "\n",
     "# Builds working data for testing\n",
     "def initUsers():\n",
@@ -343,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +432,8 @@
     "        except:  # error raised if object not created\n",
     "            print(\"Unknown error uid {uid}\")\n",
     "        \n",
-    "create()"
+    "create()\n",
+    "..."
    ]
   },
   {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -465,17 +465,17 @@
        " {'id': 2,\n",
        "  'name': 'Nikola Tesla',\n",
        "  'uid': 'niko',\n",
-       "  'dob': '03-14-2023',\n",
+       "  'dob': '03-15-2023',\n",
        "  'age': 0},\n",
        " {'id': 3,\n",
        "  'name': 'Alexander Graham Bell',\n",
        "  'uid': 'lex',\n",
-       "  'dob': '03-14-2023',\n",
+       "  'dob': '03-15-2023',\n",
        "  'age': 0},\n",
        " {'id': 4,\n",
        "  'name': 'Eli Whitney',\n",
        "  'uid': 'whit',\n",
-       "  'dob': '03-14-2023',\n",
+       "  'dob': '03-15-2023',\n",
        "  'age': 0},\n",
        " {'id': 5,\n",
        "  'name': 'Indiana Jones',\n",
@@ -494,7 +494,7 @@
        "  'age': 15}]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,6 +522,40 @@
     "- Add additional CRUD\n",
     "    - Add Update functionality to this blog.\n",
     "    - Add Delete functionality to this blog."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CRUD update: updates user name, password, phone\n",
+    "# returns self\n",
+    "def update(self, name=\"\", uid=\"\", password=\"\"):\n",
+    "    \"\"\"only updates values with length\"\"\"\n",
+    "    if len(name) > 0:\n",
+    "        self.name = name\n",
+    "    if len(uid) > 0:\n",
+    "        self.uid = uid\n",
+    "    if len(password) > 0:\n",
+    "        self.set_password(password)\n",
+    "    db.session.commit()\n",
+    "    return self"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CRUD delete: remove self\n",
+    "# None\n",
+    "def delete():\n",
+    "    db.session.delete(self)\n",
+    "    db.session.commit()\n",
+    "    return None"
    ]
   }
  ],
