--- a/_notebooks/2023-03-13-AP-unit2-4a.ipynb
+++ b/_notebooks/2023-03-13-AP-unit2-4a.ipynb
@@ -44,12 +44,11 @@
     "- Comment on where you have observed these working?  Provide a defintion of purpose.\n",
     "\n",
     "1. Flask app object: \n",
-    "    \n",
-    "It works for an api and used for making servers and websites. The flask object implements a WSGI application and acts as the central object. It is passed the name of the module or package of the application. Once it is created it will act as a central registry for the view functions, the URL rules, template configuration and much more.\n",
+    "\n",
+    "> It works for an api and used for making servers and websites. The flask object implements a WSGI application and acts as the central object. It is passed the name of the module or package of the application. Once it is created it will act as a central registry for the view functions, the URL rules, template configuration and much more.\n",
     "    \n",
     "2. SQLAlchemy db object: \n",
-    "    \n",
-    "It is a library that facilitates the communication between Python programs and databases. Most of the times, this library is used as an Object Relational Mapper (ORM) tool that translates Python classes to tables on relational databases and automatically converts function calls to SQL statements.\n"
+    "> It is a library that facilitates the communication between Python programs and databases. Most of the times, this library is used as an Object Relational Mapper (ORM) tool that translates Python classes to tables on relational databases and automatically converts function calls to SQL statements.\n"
    ]
   },
   {
