--- a/_notebooks/2023-03-16-AP-unit2-4b.ipynb
+++ b/_notebooks/2023-03-16-AP-unit2-4b.ipynb
@@ -6,11 +6,9 @@
    "metadata": {},
    "source": [
     "#  Unit 2.4b Using Programs with Data, SQL\n",
-    "> Using Programs with Data is focused on SQL and database actions.  Part B focuses on learning SQL commands, connections, and curses using an Imperative programming style,\n",
     "- toc: true\n",
     "- image: /images/python.png\n",
     "- categories: []\n",
-    "- type: ap\n",
     "- week: 26"
    ]
   },
@@ -33,20 +31,38 @@
    "metadata": {},
    "source": [
     "## Schema of Users table in Sqlite.db\n",
-    "> Uses PRAGMA statement to read schema.\n",
     "\n",
     "Describe Schema, here is resource [Resource](https://www.sqlite.org/index.html)\n",
     "- What is a database schema?\n",
+    "> A database schema defines how data is organized within a relational database\n",
+    "\n",
     "- What is the purpose of identity Column in SQL database?\n",
+    "> Identity columns can be used for generating key values. The identity property on a column guarantees the following: Each new value is generated based on the current seed & increment. \n",
+    "\n",
     "- What is the purpose of a primary key in SQL database?\n",
-    "- What are the Data Types in SQL table?"
+    "> A primary key is the column or columns that contain values that uniquely identify each row in a table. A primary key is needed: To extract or archive data from a table that is visited more than once during a process\n",
+    "\n",
+    "- What are the Data Types in SQL table?\n",
+    "> String, boolean, integer, float"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 'id', 'INTEGER', 1, None, 1)\n",
+      "(1, '_name', 'VARCHAR(255)', 1, None, 0)\n",
+      "(2, '_uid', 'VARCHAR(255)', 1, None, 0)\n",
+      "(3, '_password', 'VARCHAR(255)', 1, None, 0)\n",
+      "(4, '_dob', 'DATE', 0, None, 0)\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "\n",
@@ -89,9 +105,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Thomas Edison', 'toby', 'sha256$WOTYUzh25UQ3KLyO$2261f088c6f40028429bceec524bdea26b1146eaa8213364ac5e44fbb14bc429', '1847-02-11')\n",
+      "(2, 'Nikola Tesla', 'niko', 'sha256$cBqqDPsIoAk80rOv$f5bd4c4a6c8317dad8273140a14638d44e4fe8d3201d8a7fce800a327af63874', '2023-03-15')\n",
+      "(3, 'Alexander Graham Bell', 'lex', 'sha256$zjCcOdS8mDSbVxVG$42130b9517c0424a1d65cd0a2608ee404f308a5c62d5d226294c2807a7cbc557', '2023-03-15')\n",
+      "(4, 'Eli Whitney', 'whit', 'sha256$DQwoCCCv4qqyGUMS$009c668366039f21d8d05944c0020a5b417f4587172a96201593886adad67e1f', '2023-03-15')\n",
+      "(5, 'Indiana Jones', 'indi', 'sha256$6t67LoVg2Qy2hLNT$edb03fa214deb5544181cfb29e930f02f5828eb370ba3bedd41ef1037d38b134', '1920-10-21')\n",
+      "(6, 'Marion Ravenwood', 'raven', 'sha256$8WBsKfu4klCzJSWO$fd58a67ee1b8a2ed8b23d10835e1168a283b5c79354bbe28d6e002d98def670b', '1921-10-21')\n",
+      "(7, 'Haeryn Yu', 'haeryn', '1234', '2007-04-29')\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "\n",
@@ -132,9 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A new user record Bob Ross has been created\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "\n",
@@ -166,7 +204,7 @@
     "    cursor.close()\n",
     "    conn.close()\n",
     "    \n",
-    "#create()"
+    "create()"
    ]
   },
   {
@@ -183,9 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The row with user id haeryn the password has been successfully updated\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "\n",
@@ -221,7 +267,7 @@
     "    cursor.close()\n",
     "    conn.close()\n",
     "    \n",
-    "#update()\n"
+    "update()\n"
    ]
   },
   {
@@ -237,9 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The row with uid Bob Ross was successfully deleted\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "\n",
@@ -268,7 +322,7 @@
     "    cursor.close()\n",
     "    conn.close()\n",
     "    \n",
-    "#delete()"
+    "delete()"
    ]
   },
   {
@@ -284,9 +338,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The row with uid bob was successfully deleted\n",
+      "A new user record bob has been created\n",
+      "The row with user id raven the password has been hacked\n",
+      "(1, 'Thomas Edison', 'toby', 'sha256$WOTYUzh25UQ3KLyO$2261f088c6f40028429bceec524bdea26b1146eaa8213364ac5e44fbb14bc429', '1847-02-11')\n",
+      "(2, 'Nikola Tesla', 'niko', 'sha256$cBqqDPsIoAk80rOv$f5bd4c4a6c8317dad8273140a14638d44e4fe8d3201d8a7fce800a327af63874', '2023-03-15')\n",
+      "(3, 'Alexander Graham Bell', 'lex', 'sha256$zjCcOdS8mDSbVxVG$42130b9517c0424a1d65cd0a2608ee404f308a5c62d5d226294c2807a7cbc557', '2023-03-15')\n",
+      "(4, 'Eli Whitney', 'whit', 'sha256$DQwoCCCv4qqyGUMS$009c668366039f21d8d05944c0020a5b417f4587172a96201593886adad67e1f', '2023-03-15')\n",
+      "(5, 'Indiana Jones', 'indi', 'sha256$6t67LoVg2Qy2hLNT$edb03fa214deb5544181cfb29e930f02f5828eb370ba3bedd41ef1037d38b134', '1920-10-21')\n",
+      "(6, 'Marion Ravenwood', 'raven', 'gothackednewpassword123', '1921-10-21')\n",
+      "(7, 'Haeryn Yu', 'haeryn', '1234', '2007-04-29')\n",
+      "(8, 'Bob Ross', 'bob', '14444444444444', '1946-10-29')\n"
+     ]
+    }
+   ],
    "source": [
     "# Menu, to run other cells from one control point\n",
     "def menu():\n",
@@ -327,6 +399,24 @@
     "    \n",
     "\n",
     "Reference... [sqlite documentation](https://www.sqlitetutorial.net/sqlite-python/creating-tables/)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Object Orientation vs Imperative\n",
+    "\n",
+    "Object-oriented programming (OOP) and imperative programming are both popular programming paradigms, each with its own advantages and disadvantages. Here are some key differences between the two:\n",
+    "\n",
+    "1. Focus: Imperative programming focuses on how to achieve a specific task, while OOP focuses on the creation and manipulation of objects.\n",
+    "\n",
+    "2. Data Structures: In imperative programming, data structures are often simple arrays or structures, while in OOP, they are typically more complex objects with their own attributes and methods.\n",
+    "\n",
+    "3. Inheritance: In OOP, objects can inherit properties and methods from other objects, allowing for code reuse and increased modularity. In imperative programming, code is often duplicated or reused by copying and pasting.\n",
+    "\n",
+    "Overall, OOP is often seen as more organized, modular, and reusable than imperative programming. However, imperative programming can be more efficient for certain tasks, particularly those that involve a lot of low-level manipulation of data. Ultimately, the choice between the two will depend on the specific needs of the project and the preferences of the programmer."
    ]
   }
  ],
