--- a/_posts/2023-03-16-AP-unit2-4b.md
+++ b/_posts/2023-03-16-AP-unit2-4b.md
@@ -1,11 +1,9 @@
 ---
 keywords: fastai
-description: Using Programs with Data is focused on SQL and database actions.  Part B focuses on learning SQL commands, connections, and curses using an Imperative programming style,
 title: Unit 2.4b Using Programs with Data, SQL
 toc: true
 image: /images/python.png
 categories: []
-type: ap
 week: 26
 nb_path: _notebooks/2023-03-16-AP-unit2-4b.ipynb
 layout: notebook
@@ -34,13 +32,22 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Schema-of-Users-table-in-Sqlite.db">Schema of Users table in Sqlite.db<a class="anchor-link" href="#Schema-of-Users-table-in-Sqlite.db"> </a></h2><blockquote><p>Uses PRAGMA statement to read schema.</p>
-</blockquote>
-<p>Describe Schema, here is resource <a href="https://www.sqlite.org/index.html">Resource</a>- What is a database schema?</p>
+<h2 id="Schema-of-Users-table-in-Sqlite.db">Schema of Users table in Sqlite.db<a class="anchor-link" href="#Schema-of-Users-table-in-Sqlite.db"> </a></h2><p>Describe Schema, here is resource <a href="https://www.sqlite.org/index.html">Resource</a></p>
 <ul>
-<li>What is the purpose of identity Column in SQL database?</li>
-<li>What is the purpose of a primary key in SQL database?</li>
-<li>What are the Data Types in SQL table?</li>
+<li><p>What is a database schema?</p>
+<blockquote><p>A database schema defines how data is organized within a relational database</p>
+</blockquote>
+</li>
+<li><p>What is the purpose of identity Column in SQL database?</p>
+<blockquote><p>Identity columns can be used for generating key values. The identity property on a column guarantees the following:Each new value is generated based on the current seed &amp; increment.</p>
+</blockquote>
+</li>
+<li>What is the purpose of a primary key in SQL database?<blockquote><p>A primary key is the column or columns that contain values that uniquely identify each row in a table. A primary key is needed:To extract or archive data from a table that is visited more than once during a process</p>
+</blockquote>
+</li>
+<li>What are the Data Types in SQL table?<blockquote><p>String, boolean, integer, float</p>
+</blockquote>
+</li>
 </ul>
 
 </div>
@@ -79,6 +86,24 @@ layout: notebook
 </pre></div>
 
     </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>(0, &#39;id&#39;, &#39;INTEGER&#39;, 1, None, 1)
+(1, &#39;_name&#39;, &#39;VARCHAR(255)&#39;, 1, None, 0)
+(2, &#39;_uid&#39;, &#39;VARCHAR(255)&#39;, 1, None, 0)
+(3, &#39;_password&#39;, &#39;VARCHAR(255)&#39;, 1, None, 0)
+(4, &#39;_dob&#39;, &#39;DATE&#39;, 0, None, 0)
+</pre>
+</div>
+</div>
+
 </div>
 </div>
 
@@ -136,6 +161,26 @@ layout: notebook
 </div>
 </div>
 
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>(1, &#39;Thomas Edison&#39;, &#39;toby&#39;, &#39;sha256$WOTYUzh25UQ3KLyO$2261f088c6f40028429bceec524bdea26b1146eaa8213364ac5e44fbb14bc429&#39;, &#39;1847-02-11&#39;)
+(2, &#39;Nikola Tesla&#39;, &#39;niko&#39;, &#39;sha256$cBqqDPsIoAk80rOv$f5bd4c4a6c8317dad8273140a14638d44e4fe8d3201d8a7fce800a327af63874&#39;, &#39;2023-03-15&#39;)
+(3, &#39;Alexander Graham Bell&#39;, &#39;lex&#39;, &#39;sha256$zjCcOdS8mDSbVxVG$42130b9517c0424a1d65cd0a2608ee404f308a5c62d5d226294c2807a7cbc557&#39;, &#39;2023-03-15&#39;)
+(4, &#39;Eli Whitney&#39;, &#39;whit&#39;, &#39;sha256$DQwoCCCv4qqyGUMS$009c668366039f21d8d05944c0020a5b417f4587172a96201593886adad67e1f&#39;, &#39;2023-03-15&#39;)
+(5, &#39;Indiana Jones&#39;, &#39;indi&#39;, &#39;sha256$6t67LoVg2Qy2hLNT$edb03fa214deb5544181cfb29e930f02f5828eb370ba3bedd41ef1037d38b134&#39;, &#39;1920-10-21&#39;)
+(6, &#39;Marion Ravenwood&#39;, &#39;raven&#39;, &#39;sha256$8WBsKfu4klCzJSWO$fd58a67ee1b8a2ed8b23d10835e1168a283b5c79354bbe28d6e002d98def670b&#39;, &#39;1921-10-21&#39;)
+(7, &#39;Haeryn Yu&#39;, &#39;haeryn&#39;, &#39;1234&#39;, &#39;2007-04-29&#39;)
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
 </div>
     {% endraw %}
 
@@ -188,10 +233,24 @@ layout: notebook
     <span class="n">cursor</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
     <span class="n">conn</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
     
-<span class="c1">#create()</span>
+<span class="n">create</span><span class="p">()</span>
 </pre></div>
 
     </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>A new user record Bob Ross has been created
+</pre>
+</div>
+</div>
+
 </div>
 </div>
 
@@ -252,10 +311,24 @@ layout: notebook
     <span class="n">cursor</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
     <span class="n">conn</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
     
-<span class="c1">#update()</span>
+<span class="n">update</span><span class="p">()</span>
 </pre></div>
 
     </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>The row with user id haeryn the password has been successfully updated
+</pre>
+</div>
+</div>
+
 </div>
 </div>
 
@@ -308,10 +381,24 @@ layout: notebook
     <span class="n">cursor</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
     <span class="n">conn</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
     
-<span class="c1">#delete()</span>
+<span class="n">delete</span><span class="p">()</span>
 </pre></div>
 
     </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>The row with uid Bob Ross was successfully deleted
+</pre>
+</div>
+</div>
+
 </div>
 </div>
 
@@ -365,6 +452,30 @@ layout: notebook
 </div>
 </div>
 
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>The row with uid bob was successfully deleted
+A new user record bob has been created
+The row with user id raven the password has been hacked
+(1, &#39;Thomas Edison&#39;, &#39;toby&#39;, &#39;sha256$WOTYUzh25UQ3KLyO$2261f088c6f40028429bceec524bdea26b1146eaa8213364ac5e44fbb14bc429&#39;, &#39;1847-02-11&#39;)
+(2, &#39;Nikola Tesla&#39;, &#39;niko&#39;, &#39;sha256$cBqqDPsIoAk80rOv$f5bd4c4a6c8317dad8273140a14638d44e4fe8d3201d8a7fce800a327af63874&#39;, &#39;2023-03-15&#39;)
+(3, &#39;Alexander Graham Bell&#39;, &#39;lex&#39;, &#39;sha256$zjCcOdS8mDSbVxVG$42130b9517c0424a1d65cd0a2608ee404f308a5c62d5d226294c2807a7cbc557&#39;, &#39;2023-03-15&#39;)
+(4, &#39;Eli Whitney&#39;, &#39;whit&#39;, &#39;sha256$DQwoCCCv4qqyGUMS$009c668366039f21d8d05944c0020a5b417f4587172a96201593886adad67e1f&#39;, &#39;2023-03-15&#39;)
+(5, &#39;Indiana Jones&#39;, &#39;indi&#39;, &#39;sha256$6t67LoVg2Qy2hLNT$edb03fa214deb5544181cfb29e930f02f5828eb370ba3bedd41ef1037d38b134&#39;, &#39;1920-10-21&#39;)
+(6, &#39;Marion Ravenwood&#39;, &#39;raven&#39;, &#39;gothackednewpassword123&#39;, &#39;1921-10-21&#39;)
+(7, &#39;Haeryn Yu&#39;, &#39;haeryn&#39;, &#39;1234&#39;, &#39;2007-04-29&#39;)
+(8, &#39;Bob Ross&#39;, &#39;bob&#39;, &#39;14444444444444&#39;, &#39;1946-10-29&#39;)
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
 </div>
     {% endraw %}
 
@@ -380,6 +491,22 @@ layout: notebook
 </li>
 </ul>
 <p>Reference... <a href="https://www.sqlitetutorial.net/sqlite-python/creating-tables/">sqlite documentation</a></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Object-Orientation-vs-Imperative">Object Orientation vs Imperative<a class="anchor-link" href="#Object-Orientation-vs-Imperative"> </a></h1><p>Object-oriented programming (OOP) and imperative programming are both popular programming paradigms, each with its own advantages and disadvantages. Here are some key differences between the two:</p>
+<ol>
+<li><p>Focus: Imperative programming focuses on how to achieve a specific task, while OOP focuses on the creation and manipulation of objects.</p>
+</li>
+<li><p>Data Structures: In imperative programming, data structures are often simple arrays or structures, while in OOP, they are typically more complex objects with their own attributes and methods.</p>
+</li>
+<li><p>Inheritance: In OOP, objects can inherit properties and methods from other objects, allowing for code reuse and increased modularity. In imperative programming, code is often duplicated or reused by copying and pasting.</p>
+</li>
+</ol>
+<p>Overall, OOP is often seen as more organized, modular, and reusable than imperative programming. However, imperative programming can be more efficient for certain tasks, particularly those that involve a lot of low-level manipulation of data. Ultimately, the choice between the two will depend on the specific needs of the project and the preferences of the programmer.</p>
 
 </div>
 </div>
